# cloud-secrets-operator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: build-image.yml  ci.yml
app/: Cargo.toml
app/src/: crds.rs  lib.rs
deploy/crds/: cloud_secret.yaml  cloud_secret_provider.yaml
