[package]
name = "cloudsecrets"
version = "0.0.1"
edition = "2021"
authors = ["Dashiel Lopez Mendez <hi@64f.dev>"]
license = "Apache-2.0"
repository = "https://github.com/laconc/cloud-secrets-operator"
readme = "../README.md"
description = """
A Kubernetes operator for managing Kubernetes Secrets and the
associated AWS Secrets Manager secrets.
"""

[dependencies]
aws-sdk-secretsmanager = "1.55"
axum = "0.8"
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest", "schemars"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "0.8", features = ["derive", "impl_json_schema"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
